[gd_scene load_steps=5 format=3 uid="uid://2xd8fg0f50ek"]

[ext_resource type="Texture2D" uid="uid://6qd34hxjqu0c" path="res://assets/ui/panel_beige.png" id="1_n68ft"]
[ext_resource type="LabelSettings" uid="uid://bqr31h0748uvc" path="res://assets/fonts/LevelNumberFont.tres" id="2_8weaq"]
[ext_resource type="Script" path="res://level_button/level_button.gd" id="2_br100"]
[ext_resource type="LabelSettings" uid="uid://v7eh4c8mdqnt" path="res://assets/fonts/LevelScoreFont.tres" id="3_alkqq"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -51.0
offset_right = 51.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_n68ft")
script = ExtResource("2_br100")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelNumberLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1"
label_settings = ExtResource("2_8weaq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "9999"
label_settings = ExtResource("3_alkqq")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
